--- a/sample-presentation/src/main/res/layout/fragment_main.xml
+++ b/sample-presentation/src/main/res/layout/fragment_main.xml
@@ -4,13 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <Button
+        android:id="@+id/databaseUsersButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Elo!"
+        android:text="@string/database_source_button"
+        app:layout_constraintBottom_toTopOf="@id/networkUsersButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/networkUsersButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/network_source_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/databaseUsersButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
